@@ -5,8 +5,11 @@ Feature: Outline Sample
   Scenario Outline: Test state
     Given <state> without a table
     Given <other_state> without a table
-  Examples:
+  Examples: Rainbow colours
     |  state   | other_state |
     | missing |  passing|
     | passing| passing |
 | failing | passing |
+Examples:Only passing
+|  state   | other_state |
+| passing  | passing |
