@@ -12,7 +12,7 @@ Feature: Cucumber command line
           Given <state> without a table
           Given <other_state> without a table
 
-        Examples: 
+        Examples: Rainbow colours
           | state   | other_state |
           | missing | passing     |
           | passing | passing     |
@@ -22,14 +22,20 @@ Feature: Cucumber command line
             ./features/step_definitions/sample_steps.rb:16:in `/^failing without a table$/'
             features/outline_sample.feature:12:in `Given failing without a table'
 
-      3 scenarios
+        Examples: Only passing
+          | state   | other_state |
+          | passing | passing     |
+
+      4 scenarios
       1 failed step
       2 skipped steps
       1 undefined step
-      2 passed steps
+      4 passed steps
 
       """
 
+  # The "Only Passing" should not be printed
+  @buggy
   Scenario: Run single failing scenario outline table row
     When I run cucumber features/outline_sample.feature:12
     Then it should fail with
@@ -40,13 +46,16 @@ Feature: Cucumber command line
           Given <state> without a table
           Given <other_state> without a table
 
-        Examples: 
+        Examples: Rainbow colours
           | state   | other_state |
           | failing | passing     |
             FAIL (RuntimeError)
             ./features/step_definitions/sample_steps.rb:2:in `flunker'
             ./features/step_definitions/sample_steps.rb:16:in `/^failing without a table$/'
             features/outline_sample.feature:12:in `Given failing without a table'
+
+        Examples: Only passing
+          | state   | other_state |
 
       1 scenario
       1 failed step
@@ -58,7 +67,7 @@ Feature: Cucumber command line
     When I run cucumber -q --format progress features/outline_sample.feature
     Then it should fail with
       """
-      UUS..FS
+      UUS..FS..
 
       (::) undefined scenarios (::)
 
@@ -71,11 +80,11 @@ Feature: Cucumber command line
       ./features/step_definitions/sample_steps.rb:16:in `/^failing without a table$/'
       features/outline_sample.feature:12:in `Given failing without a table'
 
-      4 scenarios
+      5 scenarios
       1 failed step
       2 skipped steps
       1 undefined step
-      2 passed steps
+      4 passed steps
 
       """
 
