@@ -57,13 +57,16 @@ Scenario Outlines, the rich command line, the nice output format and everything
 pure Ruby users have been enjoying for a while.
 
 == Bugfixes
+* Really skip skipped steps (#90 Aslak Hellesøy)
 * No output for multi-line strings (#71 Aslak Hellesøy)
 * Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
 * Autotest-related Bugs: YAML missing (#136 Tobias Pape)
 * Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
+* Nested steps don't show mismatch (#116 Aslak Hellesøy)
 * Pending steps in > steps called from steps (#65 Aslak Hellesøy)
 
 === New features
+* Groups of tabular scenarios (#57 Aslak Hellesøy)
 * Tagging scenarios and features. Pick the ones to run with --tags (#54 Aslak Hellesøy)
 * Make the current scenario available to the steps. (#44 Aslak Hellesøy)
 * Step definition snippets contain a 'pending' call (#84 Aslak Hellesøy)
